tests/fixtures/invalid/divmod_float_dict.py
# Cannot call divmod() with Float, Dict[str, int]
x = divmod(1.0, {"a": 1})
